# rust_practice

./: .gitignore
0_basics/: README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
4_backend/4_1_db/: Cargo.toml  README.md
4_backend/4_1_db/src/: db.rs  main.rs  tests.rs
4_backend/4_2_http/: Cargo.toml  README.md
4_backend/4_2_http/client/: main.rs
4_backend/4_2_http/server/: main.rs
4_backend/4_2_http/src/: commands.rs  db.rs  main.rs  tests.rs
